Create separate threads for each worker

--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 group 'ServerRequests'
 
 buildscript {
-    ext.kotlin_version = '1.1.1'
+    ext.kotlin_version = '1.1.2-eap-44'
     repositories {
         mavenCentral()
         maven {
             url "http://dl.bintray.com/kotlin/kotlin-eap-1.1"
         }
+        jcenter()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -72,7 +73,7 @@ dependencies {
     testCompile 'de.jodamob.kotlin:kotlin-runner-junit4:0.3.1'
     testCompile "org.testfx:testfx-core:4.0.+"
     testCompile "org.testfx:testfx-junit:4.0.+"
-    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.4-beta'
+    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.14'
 }
 apply from: "script-git-version.gradle"
 
